syntax = "proto3";

option go_package = "/cacheservice";

package cacheservice;

service CacheService {
    rpc SetStock (SetStockRequest) returns (SetStockReply) {}
    rpc GetStock (GetStockRequest) returns (GetStockReply) {}
    rpc CreateOrder (CreateOrderRequest) returns (CreateOrderReply) {}
    rpc Lock (LockRequest) returns (LockReply) {}
    rpc Unlock (UnlockRequest) returns (UnlockReply) {}
    rpc GetUserPerms (GetUserPermsRequest) returns (GetUserPermsReply) {}   
}

message Order{
    uint32 id = 1;
    uint32 userId = 2;
    uint32 productId = 3;
    int32 num = 4;
    float price = 5;
    string created = 6;
}

message SetStockRequest {
    uint32 productId = 1;
    int32 num = 2;
    int32 expire = 3;
}

message SetStockReply {
    bool ok = 1;
    string error = 2;
}

message GetStockRequest {
    uint32 productId = 1;
}

message GetStockReply{
    int32 num = 1;
    bool ok = 2;
    string error = 3;
}

message CreateOrderRequest{
    Order order = 1;
    string method = 2;
}

message CreateOrderReply{
    bool ok = 1;
    string error = 2;
}

message LockRequest{
    string key = 1;
    int32 expire = 2;
}

message LockReply{
    bool ok = 1;
    string error = 2;
}

message UnlockRequest{
    string key = 1;
}

message UnlockReply{
    int32 n = 1;
    bool ok = 2;
    string error = 3;
}

message GetUserPermsRequest{
    uint32 userId = 1;
}

message GetUserPermsReply{
    string perms = 1;
    bool ok = 2;
    string error = 3;
}